# TCFileSync

./: .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  COPYRIGHT  Confix2.pkg  create_win64.bat
.github/workflows/: build.yml
VisualStudio/: Confix2.dir  TCFileSync.sln  TCFileSync.vcproj  TCFileSyncInstaller.vdproj
src/: TCFileSync.cpp  TCFileSyncActionGenerator.cpp  TCFileSyncActionGenerator.h  TCFileSyncActionWindow.cpp  TCFileSyncActionWindow.h  TCFileSyncActions.cpp  TCFileSyncActions.h  TCFileSyncDebugNew.cpp  TCFileSyncFileFinder.cpp  TCFileSyncFileFinder.h  TCFileSyncFileInfo.cpp  TCFileSyncFileInfo.h  TCFileSyncMLS.cpp  TCFileSyncOptionsWindow.cpp  TCFileSyncOptionsWindow.h  TCFileSyncSettings.h  TCFileSyncStatusDisplayer.h  TCFileSyncSyncronizer.cpp  TCFileSyncSyncronizer.h  TCFileSyncVersion.h  TCFileSyncVersion.h.in  TCFileSyncWindow.cpp  TCFileSyncWindow.h
